@@ -1,5 +1,13 @@
 2008-08-09  Frank Ch. Eigler  <fche@elastic.org>
 
+	* main.cxx (main): Don't override $PATH etc.
+	* tapsets.cxx (base_query ctor, dwarf_builder::build,
+	itrace_builder, utrace_derived_probe): Use find_executable()
+	to resolve FOO path in process("FOO").
+	* util.cxx (find_executable): Duplicate execvp logic.
+
+2008-08-09  Frank Ch. Eigler  <fche@elastic.org>
+
 	* util.cxx (find_executable): Reorganize, simplify, canonicalize.
 	* util.h, hash.cxx: Corresponding changes.
 
